--- a/components/bienvenida/bienvenida.component.html
+++ b/components/bienvenida/bienvenida.component.html
@@ -1,11 +1,11 @@
 <h1>¡Bienvenido a JEKMY!</h1>
 
- <!-- Ejemplo de lo que podriamos poner en una presentacion-->
-<div class="box"> 
+<!-- Ejemplo de lo que podriamos poner en una presentacion-->
+<div class="box">
   <!--<img src="./assets/repair.png" class="  img-repair responsive center">-->
 
   <div id='logo_container'>
-    <img src = './assets/repair.png' alt = 'Logo' class="logo img-repair">
+    <img src='./assets/repair.png' alt='Logo' class="logo img-repair">
   </div>
   <br>
 
@@ -16,13 +16,49 @@
     Nuestra empresa posee un sistema de atención completamente online, en donde los clientes
     pueden agendar sus horas según disponibilidad y el día de preferencia.
   </p>
-  
+
 </div>
 
-<div class="contacto">
-  <div id='logo_container'>
-    <img src="./assets/icontwt.png" alt = 'Logo' class="logo img-repair">
-    <img src="./assets/icongmail.png" alt="" class="logo">
-    <img src="./assets/iconfb.png" alt="" class="logo">
+<h1>Nuestros servicios</h1>
+
+<div style="  margin-top: 64px;" class=" col">
+
+  <div>
+    <div style=" margin-left: 10%; margin-right: 30px; width: 256px; height: 256 px;" class="dtl01 col-3 ">
+      <img class="fotoInstalacion" src="./assets/instalacion.png" alt="instalacion">
+      <div class="dtl1">
+        <h3>Instalación de programas</h3>
+        <p>Instalamos todo tipos de programas que necesites, como Office,etc.</p>
+      </div>
+    </div>
+    <div style="  margin-right: 30px; width: 256px; height: 256 px;" class="dtl01 col-3">
+      <img class="fotoRespaldo" src="./assets/respaldo.png" alt="respaldo">
+      <div class="dtl2">
+        <h3>Formateo y Respaldo de datos</h3>
+        <p>Si necesitas de un formateo y respaldo a tu equipo lo hacemos por ti.</p>
+      </div>
+    </div>
+    <div style="  margin-right: 30px; width: 256px; height: 256 px;" class="dtl01 col-3">
+      <img class="fotoArmado" src="./assets/armado.png" alt="armado">
+      <div class="dtl3">
+        <h3>Armado de equipo y Cotizaciones</h3>
+        <p>Contamos con las herramientas para armar el equipo que deseas.</p>
+      </div>
+    </div>
+    <div style="  margin-right: 30px; width: 256px; height: 256 px;" class="dtl01 col-3">
+      <img class="fotoInclusion" src="./assets/inclusion.png" alt="inclusion">
+      <div class="dtl4">
+        <h3>Inclusión de nuevos elementos de hardware</h3>
+        <p>Instalamos por ti los nuevos elementos que quieras incluir.</p>
+      </div>
+    </div>
+
   </div>
-</div>
+
+  <div style="margin-top: 64px;" class="contacto">
+    <div id='logo_container'>
+      <img src="./assets/icontwt.png" alt='Logo' class="logo img-repair">
+      <img src="./assets/icongmail.png" alt="" class="logo">
+      <img src="./assets/iconfb.png" alt="" class="logo">
+    </div>
+  </div>
